[metadata]
name = surfraw-tools
version = attr: surfraw_tools.__version__
author = Gabriel Lisaca
author_email = gabriel.lisaca@gmail.com
keywords = surfraw, shell, elvis, script, generate
description = Python tools to generate surfraw scripts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hoboneer/surfraw-elvis-generator/
license = Apache-2.0
license_file = COPYING
classifiers =
  Development Status :: 2 - Pre-Alpha
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Unix Shell
  License :: OSI Approved :: Apache Software License
  License :: DFSG approved
  Topic :: System :: Shells
  Topic :: Software Development :: Code Generators

[options]
packages = surfraw_tools
python_requires = >=3.6
install_requires = jinja2
include_package_data = yes
zip_safe = no

[options.entry_points]
console_scripts =
  mkelvis = surfraw_tools.mkelvis:main
  mkelviscomps = surfraw_tools.mkelviscomps:main

[flake8]
filename = ./surfraw_tools/*.py, ./setup.py
# The defaults for flake8 are okay.
# E501: line too long  ;; `black` should do most of the work here, the rest should be handled manually and would just serve as noise here.
extend-ignore = E501

[isort]
include_trailing_comma = yes
use_parentheses = yes
atomic = yes
line_length = 79
# Match `black` output.
multi_line_output = 3
