# SPDX-FileCopyrightText: 2020 Gabriel Lisaca <gabriel.lisaca@gmail.com>
#
# SPDX-License-Identifier: Apache-2.0

[metadata]
name = surfraw-tools
version = attr: surfraw_tools.__version__
author = Gabriel Lisaca
author_email = gabriel.lisaca@gmail.com
keywords = surfraw, shell, elvis, script, generate, opensearch
description = Command-line programs to make writing surfraw elvi easier
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hoboneer/surfraw-tools
project_urls =
  Documentation = https://hoboneer.github.io/surfraw-tools/
license = Apache-2.0
# What's the audience for this package?
classifiers =
  Development Status :: 3 - Alpha
  Operating System :: POSIX
  Environment :: Console
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.7
  Programming Language :: Unix Shell
  License :: OSI Approved :: Apache Software License
  License :: DFSG approved
  Topic :: System :: Shells
  Topic :: Software Development :: Code Generators
  Topic :: Utilities
  Topic :: Internet
  Topic :: Internet :: WWW/HTTP
platforms =
  POSIX
  Linux

[options]
packages = surfraw_tools, surfraw_tools.lib
python_requires = >=3.7
install_requires =
  jinja2>=2.10,<4
  lxml>=4.3.0,<5
include_package_data = yes
# Too slow to decompress on every invocation.
zip_safe = no

[options.entry_points]
console_scripts =
  mkelvis = surfraw_tools.mkelvis:main
  opensearch2elvis = surfraw_tools.opensearch2elvis:main

[flake8]
filename = ./surfraw_tools/*.py, ./surfraw_tools/lib/*.py, ./setup.py ./test/*.py
# The defaults for flake8 are okay.
# E501: line too long  ;; `black` should do most of the work here, the rest should be handled manually and would just serve as noise here.
# E203: whitespace before ':' ;; again, defer to `black`.
# D107: missing docstring in __init__  ;; too pedantic.
extend-ignore = E501, E203, D107
per-file-ignores =
  tests/*.py:D100,D103

[isort]
include_trailing_comma = yes
use_parentheses = yes
atomic = yes
line_length = 79
# Match `black` output.
multi_line_output = 3

[mypy]
warn_unused_configs = yes
# Reporting
show_column_numbers = yes
show_error_codes = yes
# Dynamic typing
## Unavoidable because of `lxml`.
disallow_any_unimported = no
disallow_any_generics = yes
disallow_subclassing_any = yes
# Untyped definitions and calls
disallow_untyped_calls = yes
disallow_untyped_defs = yes
## Decorators are kinda weird, so don't check them yet.
# None and Optional handling
no_implicit_optional = yes
##"yes" by default, but just in case.
strict_optional = yes
# Warnings
warn_unused_ignores = yes
##"yes" by default, but just in case.
warn_no_return = yes
warn_return_any = yes
warn_unreachable = yes
# Misc. strictness flags
allow_redefinition = yes
implicit_reexport = no
strict_equality = yes

# Silence mypy
# See https://github.com/pallets/jinja/issues/1426
[mypy-jinja2]
no_implicit_reexport = False
